feat: changing English writings into Italic style

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1>Sistem informasi penjualan</h1>
     <h2>latar Belakang</h2>
-    <p>Dalam era <i>digital</i> yang serba cepat <font style="color: red;">Informasi</font>  memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi entitas seperti CV New Niaga yang bergerak di industri otomotif dengan dinamika persediaan yang tinggi dan beragam.</p>
+    <p>Dalam era <i>digital</i> yang serba cepat <font style="color: red;">Informasi</font>  memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi <i>entitas</i> seperti CV New Niaga yang bergerak di industri <i>otomotif</i> dengan dinamika persediaan yang tinggi dan beragam.</p>
 
     <p>Dalam era <i>digital</i> yang serba cepat, informasi memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi entitas seperti CV New Niaga yang bergerak di industri otomotif dengan dinamika persediaan yang tinggi dan beragam.</p>
     <h2>Tujuan</h2>
     <p>
-        Tujuan utama perangkat lunak ini adalah untuk mengembangkan sistem informasi berbasis web yang mampu menyajikan data manajemen gudang secara efektif bagi CV New Niaga. Sistem ini dirancang untuk:
+        Tujuan utama perangkat lunak ini adalah untuk mengembangkan sistem informasi berbasis <i>web</i> yang mampu menyajikan data manajemen gudang secara efektif bagi CV New Niaga. Sistem ini dirancang untuk:
         <ol>
-            <li>Menyediakan akses real-time terhadap data persediaan barang.</li>
+            <li>Menyediakan akses <i>real-time</i> terhadap data persediaan barang.</li>
             <li>Meningkatkan akurasi dalam pencatatan transaksi masuk dan keluar barang.</li>
             <li>Memfasilitasi pelaporan yang komprehensif untuk mendukung pengambilan keputusan strategis.</li>
         </ol>
