adding a link to a sentence that has meaning

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Sistem informasi penjualan</h1>
     <h2>latar Belakang</h2>
-    <p>Dalam era <i>digital</i> yang serba cepat <font style="color: red;">Informasi</font>  memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi <i>entitas</i> seperti CV New Niaga yang bergerak di industri <i>otomotif</i> dengan dinamika persediaan yang tinggi dan beragam.</p>
+    <p>Dalam era <i>digital</i> yang serba cepat <font style="color: red;">Informasi</font>  memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan <a href="/makna kata/logistik.html">logistik</a>. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi <i><a href="/makna kata//entitas.html">entitas</a></i> seperti CV New Niaga yang bergerak di industri <i>otomotif</i> dengan dinamika persediaan yang tinggi dan beragam.</p>
 
     <p>Dalam era <i>digital</i> yang serba cepat, informasi memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi entitas seperti CV New Niaga yang bergerak di industri otomotif dengan dinamika persediaan yang tinggi dan beragam.</p>
     <h2>Tujuan</h2>
@@ -20,7 +20,7 @@
             <li>Meningkatkan akurasi dalam pencatatan transaksi masuk dan keluar barang.</li>
             <li>Memfasilitasi pelaporan yang komprehensif untuk mendukung pengambilan keputusan strategis.</li>
         </ol>
-        Implementasi perangkat lunak ini diharapkan membawa berbagai manfaat penting bagi operasional gudang di CV New Niaga. Dengan data stok barang yang dapat diakses secara real-time, perusahaan dapat mengoptimalkan pengelolaan iventaris, mengurangi risiko kekurangan barang yang menghambat penjualan, maupun kelebihan stok yang berpotensi meningkatkan biaya penyimpanan. Selain itu, akurasi dalam pencatatan transaksi akan meminimalkan kesalahan manusia, sehingga meningkatkan kepercayaan terhadap data yang digunakan untuk analisis dan perencanaan bisnis. Pelaporan yang komprehensif juga akan memberikan wawasan mendalam mengenai tren penjualan dan pola permintaan, memungkinkan manajemen untuk membuat keputusan yang lebih tepat dan strategis dalam menghadapi persaingan pasar.
+        Implementasi perangkat lunak ini diharapkan membawa berbagai manfaat penting bagi operasional gudang di CV New Niaga. Dengan data stok barang yang dapat diakses secara real-time, perusahaan dapat mengoptimalkan pengelolaan <a href="/makna kata/iventaris.html">iventaris</a>, mengurangi risiko kekurangan barang yang menghambat penjualan, maupun kelebihan stok yang berpotensi meningkatkan biaya penyimpanan. Selain itu, akurasi dalam pencatatan transaksi akan meminimalkan kesalahan manusia, sehingga meningkatkan kepercayaan terhadap data yang digunakan untuk analisis dan perencanaan bisnis. Pelaporan yang komprehensif juga akan memberikan wawasan mendalam mengenai tren penjualan dan pola permintaan, memungkinkan manajemen untuk membuat keputusan yang lebih tepat dan strategis dalam menghadapi persaingan pasar.
     </p>
 </body>
 </html>
