feat: create content entitas

--- a/maknakata/entitas.html
+++ b/maknakata/entitas.html
@@ -7,6 +7,15 @@
     <title>entitas</title>
 </head>
 <body>
-    
+    <h1>Pengertian Entitas</h1>
+    <p>Arti entitas dapat dilihat dari sudut pandang yang berbeda. Pada dasarnya, dalam konteks bisnis, konsep entitas memiliki makna sebagai suatu pihak yang mandiri dan terpisah dari pemiliknya.Menurut Kamus Besar Bahasa Indonesia (KBBI), entitas adalah suatu unit yang konkret. Oleh karena itu, entitas dapat dianggap sebagai unit yang memiliki keberadaan yang unik dan berbeda dari yang lain, meskipun tidak selalu berbentuk fisik.</p>
+    <h2>Pengertian Entitas dari Berbagai Bidang</h2>
+    <p>
+        Pengertian entitas memiliki beragam makna yang dapat dilihat dari berbagai konsep, seperti konsep hukum, akuntansi, ekonomi, dan juga konsep fiskal. Mari kita bahas makna entitas dari berbagai bidang.
+    </p>
+    <h2>Pengertian Entitas dari Bidang Hukum</h2>
+    <p>
+        Dalam konteks hukum, entitas merujuk pada setiap badan hukum atau kesatuan yang diakui atau diperlakukan sebagai individu menurut ketentuan hukum yang berlaku, atau sebagai kesatuan atau badan hukum yang dijamin keberadaannya oleh hukum yang berlaku.
+    </p>
 </body>
 </html>
