feat: create content iventaris

--- a/maknakata/iventaris.html
+++ b/maknakata/iventaris.html
@@ -7,6 +7,11 @@
     <title>Iventaris</title>
 </head>
 <body>
-    
+    <h1>Pengertian iventaris</h1>
+    <p>
+        Secara umum, inventaris merupakan catatan atau daftar yang mencakup semua barang, aset dan peralatan yang dimiliki oleh organisasi, perusahaan atau individu.
+        Dalam manajemen bisnis, inventaris merupakan aset penting karena menjadi sumber utama pendapatan dan keuntungan bagi perusahaan dan pemegang saham. 
+        Aset ini juga berperan penting untuk memastikan operasional perusahaan berjalan dengan lancar, membantu mengelola anggaran secara efisien dan mendukung ketaatan terhadap regulasi aset.
+    </p>
 </body>
 </html>
