feat: create content logistik

--- a/maknakata/logistik.html
+++ b/maknakata/logistik.html
@@ -7,6 +7,8 @@
     <title>Logistik</title>
 </head>
 <body>
-    
+    <p>
+        Logistik merupakan suatu kegiatan yang mencakup proses pengadaan, perawatan, distribusi, serta penyediaan pengganti terhadap perlengkapan, perbekalan, dan sumber daya manusia yang dibutuhkan dalam suatu organisasi. Dalam konteks ilmu kemiliteran, logistik dipahami sebagai bidang yang mengatur pengadaan, pemeliharaan, serta transportasi peralatan, pembekalan, dan pasukan guna mendukung pelaksanaan tugas operasional. Lebih lanjut, logistik juga mencakup seluruh persiapan dan tindakan yang diperlukan untuk memastikan pasukan memiliki perlengkapan dan perbekalan yang memadai agar dapat bertempur dalam kondisi paling optimal dan menguntungkan. Selain itu, logistik berperan penting dalam penanganan berbagai aspek operasional militer, termasuk pengelolaan dan koordinasi yang berkaitan dengan kelancaran operasi secara keseluruhan.
+    </p>
 </body>
 </html>
