--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Tujuan</h2>
     <p>
         Tujuan utama perangkat lunak ini adalah untuk mengembangkan sistem informasi berbasis <i>web</i> yang mampu menyajikan data manajemen gudang secara efektif bagi CV New Niaga. Sistem ini dirancang untuk:
-        <ol>
+        <ol type="A" start="3"  reversed>
             <li>Menyediakan akses <i>real-time</i> terhadap data persediaan barang.</li>
             <li>Meningkatkan akurasi dalam pencatatan transaksi masuk dan keluar barang.</li>
             <li>Memfasilitasi pelaporan yang komprehensif untuk mendukung pengambilan keputusan strategis.</li>
