feat: create navigation link to about page source

--- a/maknakata/iventaris.html
+++ b/maknakata/iventaris.html
@@ -13,5 +13,8 @@
         Dalam manajemen bisnis, inventaris merupakan aset penting karena menjadi sumber utama pendapatan dan keuntungan bagi perusahaan dan pemegang saham. 
         Aset ini juga berperan penting untuk memastikan operasional perusahaan berjalan dengan lancar, membantu mengelola anggaran secara efisien dan mendukung ketaatan terhadap regulasi aset.
     </p>
+    <p>
+        <a href="https://pasartrainer.com/blog/inventaris-pengertian-manfaat-dan-cara-mengelolanya">source</a>
+    </p>
 </body>
 </html>
