feat: create navigation to home

--- a/maknakata/iventaris.html
+++ b/maknakata/iventaris.html
@@ -16,5 +16,7 @@
     <p>
         <a href="https://pasartrainer.com/blog/inventaris-pengertian-manfaat-dan-cara-mengelolanya">source</a>
     </p>
+    <a href="/index.html">kembali ke halaman utama</a>
+
 </body>
 </html>
