--- a/maknakata/logistik.html
+++ b/maknakata/logistik.html
@@ -13,7 +13,6 @@
     <p>
         <a href="https://kbbi.web.id/logistik">source</a>
     </p>
-        
-
+    <a href="/index.html">kembali ke halaman utama</a>
 </body>
 </html>
