style: add inline CSS for page layout

--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
 </head>
 <body>
     <header>
-        <h1>Sistem informasi penjualan</h1>
+        <h1 style="margin: 0; font-size: 32px;">Sistem informasi penjualan</h1>
     </header>
 
     <main>
         <section>
-            <h2>latar Belakang</h2>
+            <h2 style="color: #0056b3; font-size: 24px; margin-bottom: 10px;">latar Belakang</h2>
 
-            <p>Dalam era <em>dig ital</em> yang serba cepat <font color="red">Sistem Informasi</font> memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan <a href="/makna kata/logistik.html">logistik</a>. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi <em><a href="/maknakata/entitas.html">entitas</a></em> seperti CV New Niaga yang bergerak di industri <em>otomotif</em> dengan dinamika persediaan yang tinggi dan beragam.</p>
+            <p style="font-size: 16px; margin-bottom: 15px;">Dalam era <em>dig ital</em> yang serba cepat <font color="red">Sistem Informasi</font> memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan <a href="/makna kata/logistik.html">logistik</a>. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi <em><a href="/maknakata/entitas.html">entitas</a></em> seperti CV New Niaga yang bergerak di industri <em>otomotif</em> dengan dinamika persediaan yang tinggi dan beragam.</p>
         
-            <p>Dalam era <em>digital</em> yang serba cepat, informasi memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi entitas seperti CV New Niaga yang bergerak di industri otomotif dengan dinamika persediaan yang tinggi dan beragam.</p>
+            <p style="font-size: 16px;">Dalam era <em>digital</em> yang serba cepat, informasi memegang peranan krusial dalam pengambilan keputusan bisnis, terutama dalam manajemen rantai pasok dan logistik. <mark>Efisiensi dalam pengelolaan gudang menjadi fondasi utama keberhasilan operasional perusahaan</mark>, terutama bagi entitas seperti CV New Niaga yang bergerak di industri otomotif dengan dinamika persediaan yang tinggi dan beragam.</p>
         </section>
 
         <section>
 
-            <h2>Tujuan</h2>
-            <p>
+            <h2 style="color: #0056b3; font-size: 24px; margin-bottom: 10px;">Tujuan</h2>
+            <p style="font-size: 16px; margin-bottom: 15px;">
                 Tujuan utama perangkat lunak ini adalah untuk mengembangkan sistem informasi berbasis <em>web</em> yang mampu menyajikan data manajemen gudang secara efektif bagi CV New Niaga. Sistem ini dirancang untuk:
-                <ol type="A" start="3"  reversed>
+                <ol type="A" start="3"  reversed style="margin-left: 25px; margin-bottom: 15px; color: #333;">
                     <li>Menyediakan akses <em>real-time</em> terhadap data persediaan barang.</li>
                     <li>Meningkatkan akurasi dalam pencatatan transaksi masuk dan keluar barang.</li>
                     <li>Memfasilitasi pelaporan yang komprehensif untuk mendukung pengambilan keputusan strategis.</li>
                 </ol>
+                
                 Implementasi perangkat lunak ini diharapkan membawa berbagai manfaat penting bagi operasional gudang di CV New Niaga. Dengan data stok barang yang dapat diakses secara real-time, perusahaan dapat mengoptimalkan pengelolaan <a href="/maknakata/iventaris.html">iventaris</a>, mengurangi risiko kekurangan barang yang menghambat penjualan, maupun kelebihan stok yang berpotensi meningkatkan biaya penyimpanan. Selain itu, akurasi dalam pencatatan transaksi akan meminimalkan kesalahan manusia, sehingga meningkatkan kepercayaan terhadap data yang digunakan untuk analisis dan perencanaan bisnis. Pelaporan yang komprehensif juga akan memberikan wawasan mendalam mengenai tren penjualan dan pola permintaan, memungkinkan manajemen untuk membuat keputusan yang lebih tepat dan strategis dalam menghadapi persaingan pasar.
             </p>
         </section>
